# task-manager-backend

./: .dockerignore  .env.example  .gitignore  BACKEND_TECHNICAL_SPEC.txt  Dockerfile  Jenkinsfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.ps1  test_db.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  projects.py  tasks.py
app/core/: config.py  dependencies.py  middleware.py  security.py
app/db/: session.py
app/models/: project.py  project_member.py  task.py  user.py  user_task_status.py
app/schemas/: auth.py  project.py  project_member.py  task.py
app/services/: access_service.py  auth_service.py  project_access_service.py  project_member_service.py  project_service.py  task_service.py
docs/: ARCHITECTURE.md  features.md  frontend_guidelines.md  user_flow.md
openapi/: openapi.yaml
tests/: conftest.py
tests/functional/: test_api.py  test_tasks_api.py
tests/integration/: test_auth_service.py  test_project_service.py  test_task_service.py
tests/unit/: test_security.py
